# h2

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTORS.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: ci.yml  install_h2spec.sh
.travis/: run.sh
_travis/: install.sh
docs/source/: advanced-usage.rst  api.rst  asyncio-example.rst  basic-usage.rst  conf.py  examples.rst  gevent-example.rst  index.rst  installation.rst  low-level.rst  negotiating-http2.rst  related.rst  release-notes.rst  trio-example.rst  twisted-post-example.rst  wsgi-example.rst
examples/asyncio/: asyncio-server.py  wsgi-server.py
examples/curio/: curio-server.py
examples/eventlet/: eventlet-server.py
examples/fragments/: client_https_setup_fragment.py  client_upgrade_fragment.py  server_https_setup_fragment.py  server_upgrade_fragment.py
examples/gevent/: gevent-server.py
examples/tornado/: tornado-server.py
examples/trio/: trio-server.py
examples/twisted/: head_request.py  post_request.py  twisted-server.py
fuzz/: README.md  h2_client_fuzzer.py  h2_server_fuzzer.py
h2/: __init__.py  config.py  connection.py  errors.py  events.py  exceptions.py  frame_buffer.py  settings.py  state.py  stream.py  utilities.py  windows.py
src/h2/: __init__.py  _typing.py  config.py  connection.py  errors.py  events.py  exceptions.py  frame_buffer.py  settings.py  stream.py  utilities.py  windows.py
test/: conftest.py  coroutine_tests.py  h2spectest.sh  helpers.py  test_basic_logic.py  test_closed_streams.py  test_complex_flows.py  test_complex_logic.py  test_concurrent_stream_open.py  test_config.py  test_events.py  test_flow_control_window.py  test_h2_upgrade.py  test_head_request.py  test_header_indexing.py  test_informational_responses.py  test_interacting_stacks.py  test_invalid_content_lengths.py  test_invalid_frame_sequences.py  test_invalid_headers.py  test_priority.py  test_related_events.py  test_rfc7838.py  test_rfc8441.py  test_settings.py  test_state_machines.py  test_stream_reset.py  test_utility_functions.py  threaded_tests.py
tests/: conftest.py  coroutine_tests.py  h2spectest.sh  helpers.py  test_basic_logic.py  test_closed_streams.py  test_complex_logic.py  test_config.py  test_connect_pseudo_headers.py  test_connect_roundtrip_and_edges.py  test_events.py  test_exceptions.py  test_flow_control_window.py  test_h2_upgrade.py  test_head_request.py  test_header_indexing.py  test_informational_responses.py  test_interacting_stacks.py  test_invalid_content_lengths.py  test_invalid_frame_sequences.py  test_invalid_headers.py  test_priority.py  test_related_events.py  test_rfc7838.py  test_rfc8441.py  test_settings.py  test_state_machines.py  test_stream_reset.py  test_utility_functions.py
tests/typing/: strict_bytes.py
visualizer/: __init__.py  visualize.py
